--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 .todo_app_section{
-    background-color: gray;
+    background-color: rgb(111,111,111);
     height: 100vh;
     display: flex;
     align-items: center;
